mobile hero section v1

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -41,8 +41,14 @@
   </header>
   <main>
    
-    <div> 
-    <img class="first-feature" src="images/illustration-hero.svg" alt="first-feature">
+    <div class="first-feature"> 
+    <img src="images/illustration-hero.svg" alt="first-feature">
+    </div>
+
+    <div class="first-feature">
+    <h1>A SIMPLE BOOKMARK MANAGER</h1>
+    <p>A clean and simple interface to organize<br> your favourite websites. Open a new<br> browser tab and see your sites load<br> instantly. Try it for free.</p>
+    <button class="chrome-button">Get it on Chrome</button> <button class="firefox-button">Get it on Firefox</button>
     </div>
 
 
