--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -71,7 +71,7 @@
         <input type="radio" name="tabs" id="easySharing">
         <label for="easySharing">Easy Sharing</label>
         <hr>
-        
+
         <div class="tab-content" id="firstOptionContent">
 
           <img src="images/illustration-features-tab-1.svg" alt="simple bookmarking">
@@ -90,7 +90,7 @@
             your bookmarks.
           </p>
         </div>
-        
+
         <div class="tab-content" id="content-easy">
           <img src="images/illustration-features-tab-3.svg" alt="easy sharing">
           <h3>Share your bookmarks</h3>
@@ -103,11 +103,43 @@
 
       </section>
 
-
     </div>
 
+    <div class="download-section">
 
 
+      <h2>Download the extension</h2>
+      <p>We've got more browsers in the pipeline.<br>
+        Please do let us know if you've got a<br>
+        favourite you'd like us to prioritize.</p>
+    </div>
+
+    <div class="card-container">
+      <div class="card">
+        <img src="images/logo-chrome.svg" alt="Chrome logo" class="logo">
+        <h2>Add to Chrome</h2>
+        <p >Minimum version 62</p>
+        <img src="images/bg-dots.svg">
+        <button class="btn">Add & Install Extension</button>
+      </div>
+
+       <div class="card">
+        <img src="images/logo-firefox.svg" alt="firefox logo" class="logo">
+        <h2>Add to Chrome</h2>
+        <p >Minimum version 46</p>
+        <img src="images/bg-dots.svg">
+        <button class="btn">Add & Install Extension</button>
+      </div>
+
+       <div class="card">
+        <img src="images/logo-opera.svg" alt="opera logo" class="logo">
+        <h2>Add to Chrome</h2>
+        <p>Minimum version 62</p>
+        <img src="images/bg-dots.svg">
+        <button class="btn">Add & Install Extension</button>
+      </div>
+
+    </div>
 
 
 
