FAQs mobile section v1

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -105,6 +105,7 @@
 
     </div>
 
+
     <div class="download-section">
 
 
@@ -118,26 +119,58 @@
       <div class="card">
         <img src="images/logo-chrome.svg" alt="Chrome logo" class="logo">
         <h2>Add to Chrome</h2>
-        <p >Minimum version 62</p>
-        <img src="images/bg-dots.svg">
-        <button class="btn">Add & Install Extension</button>
-      </div>
-
-       <div class="card">
-        <img src="images/logo-firefox.svg" alt="firefox logo" class="logo">
-        <h2>Add to Chrome</h2>
-        <p >Minimum version 46</p>
-        <img src="images/bg-dots.svg">
-        <button class="btn">Add & Install Extension</button>
-      </div>
-
-       <div class="card">
-        <img src="images/logo-opera.svg" alt="opera logo" class="logo">
-        <h2>Add to Chrome</h2>
         <p>Minimum version 62</p>
         <img src="images/bg-dots.svg">
         <button class="btn">Add & Install Extension</button>
       </div>
+
+      <div class="card">
+        <img src="images/logo-firefox.svg" alt="firefox logo" class="logo">
+        <h2>Add to Firefox</h2>
+        <p>Minimum version 55</p>
+        <img src="images/bg-dots.svg">
+        <button class="btn">Add & Install Extension</button>
+      </div>
+
+      <div class="card">
+        <img src="images/logo-opera.svg" alt="opera logo" class="logo">
+        <h2>Add to Opera</h2>
+        <p>Minimum version 46</p>
+        <img src="images/bg-dots.svg">
+        <button class="btn">Add & Install Extension</button>
+      </div>
+
+    </div>
+
+    <div class="asked-questions-title">
+      <h2>Frequently Asked Questions</h2>
+      <p>Here are some of our FAQs. If you have any<br>
+        other questions you'd like answered please<br>
+        feel free to email us </p>
+    </div>
+
+    <div class="questions-container">
+      <details>
+        <summary>What is Bookmark?</summary>
+        <p>Bookmark is a tool that lets you save and organize websites easily.</p>
+      </details>
+      <hr>
+      <details>
+        <summary>How can I request a new browser?</summary>
+        <p>You can request a new browser by contacting support or using the form.</p>
+      </details>
+      <hr>
+      <details>
+        <summary>Is there a mobile app?</summary>
+        <p>Yes! Our mobile app is available on iOS and Android stores.</p>
+      </details>
+      <hr>
+      <details>
+        <summary>What about other Chromium browsers?</summary>
+        <p>We support most Chromium browsers with similar features.</p>
+      </details>
+      <hr>
+      <a href="#" class="more-info-btn">More Info</a>
 
     </div>
 
