sign up mobile section v1

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -175,6 +175,14 @@
     </div>
 
 
+    <div class="sign-up-section">
+
+      <p>35.000+ ALREADY JOINED</p>
+      <h2>Stay up-to-date with what<br> we're doing</h2>
+      <input type="text" id="email" placeholder="Enter your email adress">
+      <button type="button">Contact Us</button>
+
+    </div>
 
   </main>
 </body>
