footer mobile section

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -43,24 +43,32 @@
   </header>
   <main>
 
-    <div class="first-feature">
-      <img src="images/illustration-hero.svg" alt="first-feature">
-    </div>
+    <section class="hero-section">
+      <div class="first-feature">
+        <img src="images/illustration-hero.svg" alt="first-feature">
+      </div>
 
-    <div class="first-feature">
-      <h1>A SIMPLE BOOKMARK MANAGER</h1>
-      <p>A clean and simple interface to organize<br> your favourite websites. Open a new<br> browser tab and see your
-        sites load<br> instantly. Try it for free.</p>
-      <button class="chrome-button">Get it on Chrome</button> <button class="firefox-button">Get it on Firefox</button>
-    </div>
+      <div class="first-feature">
+        <h1>A SIMPLE BOOKMARK MANAGER</h1>
+        <p>A clean and simple interface to organize<br> your favourite websites. Open a new<br> browser tab and see your
+          sites load<br> instantly. Try it for free.</p>
+        <button class="chrome-button">Get it on Chrome</button> <button class="firefox-button">Get it on
+          Firefox</button>
+      </div>
 
-    <div class="features">
+    </section>
 
-      <h2>Features</h2>
-      <p> Our aim is to make it quick and easy for you<br> to access your favourite websites. Your<br> bookmarks sync
-        between your devices so<br> you can access them on the go.</p>
+    <section class="features">
 
-      <section class="tabs-section">
+      <div>
+        <h2>Features</h2>
+        <p> Our aim is to make it quick and easy for you<br> to access your favourite websites. Your<br> bookmarks sync
+          between your devices so<br> you can access them on the go.</p>
+
+      </div>
+
+
+      <div class="tabs-section">
         <hr>
         <input type="radio" name="tabs" id="simpleBookmarking" checked>
         <label for="simpleBookmarking">Simple Bookmarking</label>
@@ -101,90 +109,113 @@
           </p>
         </div>
 
-      </section>
-
-    </div>
-
-
-    <div class="download-section">
-
-
-      <h2>Download the extension</h2>
-      <p>We've got more browsers in the pipeline.<br>
-        Please do let us know if you've got a<br>
-        favourite you'd like us to prioritize.</p>
-    </div>
-
-    <div class="card-container">
-      <div class="card">
-        <img src="images/logo-chrome.svg" alt="Chrome logo" class="logo">
-        <h2>Add to Chrome</h2>
-        <p>Minimum version 62</p>
-        <img src="images/bg-dots.svg">
-        <button class="btn">Add & Install Extension</button>
       </div>
 
-      <div class="card">
-        <img src="images/logo-firefox.svg" alt="firefox logo" class="logo">
-        <h2>Add to Firefox</h2>
-        <p>Minimum version 55</p>
-        <img src="images/bg-dots.svg">
-        <button class="btn">Add & Install Extension</button>
+    </section>
+
+
+    <section class="download-section">
+      <div>
+
+
+
+        <h2>Download the extension</h2>
+        <p>We've got more browsers in the pipeline.<br>
+          Please do let us know if you've got a<br>
+          favourite you'd like us to prioritize.</p>
       </div>
 
-      <div class="card">
-        <img src="images/logo-opera.svg" alt="opera logo" class="logo">
-        <h2>Add to Opera</h2>
-        <p>Minimum version 46</p>
-        <img src="images/bg-dots.svg">
-        <button class="btn">Add & Install Extension</button>
+      <div class="card-container">
+        <div class="card">
+          <img src="images/logo-chrome.svg" alt="Chrome logo" class="logo">
+          <h2>Add to Chrome</h2>
+          <p>Minimum version 62</p>
+          <img src="images/bg-dots.svg">
+          <button class="btn">Add & Install Extension</button>
+        </div>
+
+        <div class="card">
+          <img src="images/logo-firefox.svg" alt="firefox logo" class="logo">
+          <h2>Add to Firefox</h2>
+          <p>Minimum version 55</p>
+          <img src="images/bg-dots.svg">
+          <button class="btn">Add & Install Extension</button>
+        </div>
+
+        <div class="card">
+          <img src="images/logo-opera.svg" alt="opera logo" class="logo">
+          <h2>Add to Opera</h2>
+          <p>Minimum version 46</p>
+          <img src="images/bg-dots.svg">
+          <button class="btn">Add & Install Extension</button>
+        </div>
+
       </div>
 
-    </div>
+      <div class="asked-questions-title">
+        <h2>Frequently Asked Questions</h2>
+        <p>Here are some of our FAQs. If you have any<br>
+          other questions you'd like answered please<br>
+          feel free to email us </p>
+      </div>
 
-    <div class="asked-questions-title">
-      <h2>Frequently Asked Questions</h2>
-      <p>Here are some of our FAQs. If you have any<br>
-        other questions you'd like answered please<br>
-        feel free to email us </p>
-    </div>
+      <div class="questions-container">
+        <details>
+          <summary>What is Bookmark?</summary>
+          <p>Bookmark is a tool that lets you save and organize websites easily.</p>
+        </details>
+        <hr>
+        <details>
+          <summary>How can I request a new browser?</summary>
+          <p>You can request a new browser by contacting support or using the form.</p>
+        </details>
+        <hr>
+        <details>
+          <summary>Is there a mobile app?</summary>
+          <p>Yes! Our mobile app is available on iOS and Android stores.</p>
+        </details>
+        <hr>
+        <details>
+          <summary>What about other Chromium browsers?</summary>
+          <p>We support most Chromium browsers with similar features.</p>
+        </details>
+        <hr>
+        <a href="#" class="more-info-btn">More Info</a>
 
-    <div class="questions-container">
-      <details>
-        <summary>What is Bookmark?</summary>
-        <p>Bookmark is a tool that lets you save and organize websites easily.</p>
-      </details>
-      <hr>
-      <details>
-        <summary>How can I request a new browser?</summary>
-        <p>You can request a new browser by contacting support or using the form.</p>
-      </details>
-      <hr>
-      <details>
-        <summary>Is there a mobile app?</summary>
-        <p>Yes! Our mobile app is available on iOS and Android stores.</p>
-      </details>
-      <hr>
-      <details>
-        <summary>What about other Chromium browsers?</summary>
-        <p>We support most Chromium browsers with similar features.</p>
-      </details>
-      <hr>
-      <a href="#" class="more-info-btn">More Info</a>
+      </div>
 
-    </div>
+    </section>
 
 
-    <div class="sign-up-section">
+    <section class="sign-up-section">
+      <div>
 
-      <p>35.000+ ALREADY JOINED</p>
-      <h2>Stay up-to-date with what<br> we're doing</h2>
-      <input type="text" id="email" placeholder="Enter your email adress">
-      <button type="button">Contact Us</button>
+        <p>35.000+ ALREADY JOINED</p>
+        <h2>Stay up-to-date with what<br> we're doing</h2>
+        <input type="text" id="email" placeholder="Enter your email adress">
+        <button type="button">Contact Us</button>
 
-    </div>
+      </div>
+
+    </section>
 
   </main>
+
+  <footer>
+
+    <div class="links">
+      <img src="images/logo-bookmark.svg" alt="logo">
+      <a>FEATURES </a>
+      <a>PRICING </a>
+      <a>CONTACT </a>
+
+    </div>
+
+   <div class="image-links"> 
+      <img src="images/icon-facebook.svg" alt="logo">
+      <img src="images/icon-twitter.svg" alt="logo">
+  </div>
+  </footer>
 </body>
 
 </html>
