--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <header>
+
     <div class="logo">
       <img src="images/logo-bookmark.svg" alt="logo">
 
@@ -21,8 +22,17 @@
       <span></span>
     </label>
     <input type="checkbox" id="menu-toggle">
-    <nav>
 
+    <nav class="desktop-nav">
+      <ul>
+        <li><a href="#">FEATURES</a></li>
+        <li><a href="#">PRICING</a></li>
+        <li><a href="#">CONTACT</a></li>
+        <li><a class="login-button" href="#">LOGIN</a></li>
+      </ul>
+    </nav>
+
+    <nav class="mobile-nav">
       <div>
         <img src="images/logo-bookmark.svg" alt="logo">
         <!-- Botón cancelar como label -->
@@ -44,12 +54,12 @@
   <main>
 
     <section class="hero-section">
-      <div class="first-feature">
-        <img src="images/illustration-hero.svg" alt="first-feature">
+      <div class="hero-img">
+        <img src="images/illustration-hero.svg" alt="hero-img">
       </div>
 
-      <div class="first-feature">
-        <h1>A SIMPLE BOOKMARK MANAGER</h1>
+      <div class="hero-text">
+        <h1>A SIMPLE BOOKMARK<br> MANAGER</h1>
         <p>A clean and simple interface to organize<br> your favourite websites. Open a new<br> browser tab and see your
           sites load<br> instantly. Try it for free.</p>
         <button class="chrome-button">Get it on Chrome</button> <button class="firefox-button">Get it on
@@ -60,7 +70,7 @@
 
     <section class="features">
 
-      <div>
+      <div class="intro-features">
         <h2>Features</h2>
         <p> Our aim is to make it quick and easy for you<br> to access your favourite websites. Your<br> bookmarks sync
           between your devices so<br> you can access them on the go.</p>
@@ -69,44 +79,70 @@
 
 
       <div class="tabs-section">
-        <hr>
+
         <input type="radio" name="tabs" id="simpleBookmarking" checked>
-        <label for="simpleBookmarking">Simple Bookmarking</label>
-        <hr>
         <input type="radio" name="tabs" id="speedySearching">
-        <label for="speedySearching">Speedy Searching</label>
-        <hr>
         <input type="radio" name="tabs" id="easySharing">
-        <label for="easySharing">Easy Sharing</label>
-        <hr>
+
+        <div class="tab-labels-mobile">
+          <hr>
+
+          <label for="simpleBookmarking">Simple Bookmarking</label>
+          <hr>
+
+          <label for="speedySearching">Speedy Searching</label>
+          <hr>
+
+          <label for="easySharing">Easy Sharing</label>
+          <hr>
+        </div>
+
+        <div class="tab-labels-desktop">
+
+         
+          <label for="simpleBookmarking">Simple Bookmarking</label>
+          <label for="speedySearching">Speedy Searching</label>
+          <label for="easySharing">Easy Sharing</label>
+
+          <hr>
+        </div>
 
         <div class="tab-content" id="firstOptionContent">
 
           <img src="images/illustration-features-tab-1.svg" alt="simple bookmarking">
-          <h3> Bookmark in one click</h3>
-          <p> Organize your bookmarks however you like.<br>Our simple drag-and-drop interface gives<br> you complete
-            control over how you manage<br> your favourite sites.</p>
 
+          <div>
+            <h3> Bookmark in one click</h3>
+            <p> Organize your bookmarks however you like.<br>Our simple drag-and-drop interface gives<br> you complete
+              control over how you manage<br> your favourite sites.</p>
+            <button>More Info</button>
+          </div>
         </div>
 
         <div class="tab-content" id="content-speedy">
           <img src="images/illustration-features-tab-2.svg" alt="speedy searching">
-          <h3>Intelligent Search</h3>
-          <p>
-            Our powerfull search feature will help you find saved<br>
-            sites in no time at all. No need o trawl through all of<br>
-            your bookmarks.
-          </p>
+          <div>
+            <h3>Intelligent Search</h3>
+            <p>
+              Our powerfull search feature will help you find saved<br>
+              sites in no time at all. No need o trawl through all of<br>
+              your bookmarks.
+            </p>
+            <button>More Info</button>
+          </div>
         </div>
 
         <div class="tab-content" id="content-easy">
           <img src="images/illustration-features-tab-3.svg" alt="easy sharing">
-          <h3>Share your bookmarks</h3>
-          <p>
-            Easily share your bookmarks and collectons with<br>
-            others. Create a shareable link that you can send at<br>
-            the click of a button.
-          </p>
+          <div>
+            <h3>Share your bookmarks</h3>
+            <p>
+              Easily share your bookmarks and collectons with<br>
+              others. Create a shareable link that you can send at<br>
+              the click of a button.
+            </p>
+            <button>More Info</button>
+          </div>
         </div>
 
       </div>
@@ -116,8 +152,6 @@
 
     <section class="download-section">
       <div>
-
-
 
         <h2>Download the extension</h2>
         <p>We've got more browsers in the pipeline.<br>
@@ -211,10 +245,10 @@
 
     </div>
 
-   <div class="image-links"> 
+    <div class="image-links">
       <img src="images/icon-facebook.svg" alt="logo">
       <img src="images/icon-twitter.svg" alt="logo">
-  </div>
+    </div>
   </footer>
 </body>
 
