FAQs, SiGN UP & Footer DESIGN FOR DESKTOP USERS

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -99,7 +99,7 @@
 
         <div class="tab-labels-desktop">
 
-         
+
           <label for="simpleBookmarking">Simple Bookmarking</label>
           <label for="speedySearching">Speedy Searching</label>
           <label for="easySharing">Easy Sharing</label>
@@ -185,6 +185,10 @@
         </div>
 
       </div>
+    </section>
+
+
+    <section class="FAQs-section">
 
       <div class="asked-questions-title">
         <h2>Frequently Asked Questions</h2>
@@ -194,6 +198,7 @@
       </div>
 
       <div class="questions-container">
+        <hr class="first-hr-faqs">
         <details>
           <summary>What is Bookmark?</summary>
           <p>Bookmark is a tool that lets you save and organize websites easily.</p>
@@ -226,9 +231,10 @@
 
         <p>35.000+ ALREADY JOINED</p>
         <h2>Stay up-to-date with what<br> we're doing</h2>
-        <input type="text" id="email" placeholder="Enter your email adress">
-        <button type="button">Contact Us</button>
-
+        <div class="sign-up-button">
+          <input type="text" id="email" placeholder="Enter your email adress">
+          <button type="button">Contact Us</button>
+        </div>
       </div>
 
     </section>
