Changed hover styles from Global to only Dekstop

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -231,12 +231,13 @@
 
         <p>35.000+ ALREADY JOINED</p>
         <h2>Stay up-to-date with what<br> we're doing</h2>
-        <div class="sign-up-button">
-          <input type="text" id="email" placeholder="Enter your email adress">
-          <button type="button">Contact Us</button>
-        </div>
+        <form>
+          <div class="sign-up-button">
+            <input type="email" id="email" placeholder="Enter your email adress" required>
+            <button type="submit">Contact Us</button>
+          </div>
       </div>
-
+      </form>
     </section>
 
   </main>
