--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,13 +13,12 @@
   <header>
 
     <div class="logo">
-      <img src="images/logo-bookmark.svg" alt="logo">
-
+      <a href="#">
+        <img src="images/logo-bookmark.svg" alt="logo">
+      </a>
     </div>
     <label for="menu-toggle" class="menu-icon">
-      <span></span>
-      <span></span>
-      <span></span>
+      <img src="images/icon-hamburger.svg" alt="menu">
     </label>
     <input type="checkbox" id="menu-toggle">
 
@@ -161,7 +160,7 @@
 
       <div class="card-container">
         <div class="card">
-          <img src="images/logo-chrome.svg" alt="Chrome logo" class="logo">
+          <img src="images/logo-chrome.svg" alt="Chrome logo" class="logo-card">
           <h2>Add to Chrome</h2>
           <p>Minimum version 62</p>
           <img src="images/bg-dots.svg">
@@ -169,7 +168,7 @@
         </div>
 
         <div class="card">
-          <img src="images/logo-firefox.svg" alt="firefox logo" class="logo">
+          <img src="images/logo-firefox.svg" alt="firefox logo" class="logo-card">
           <h2>Add to Firefox</h2>
           <p>Minimum version 55</p>
           <img src="images/bg-dots.svg">
@@ -177,7 +176,7 @@
         </div>
 
         <div class="card">
-          <img src="images/logo-opera.svg" alt="opera logo" class="logo">
+          <img src="images/logo-opera.svg" alt="opera logo" class="logo-card">
           <h2>Add to Opera</h2>
           <p>Minimum version 46</p>
           <img src="images/bg-dots.svg">
@@ -200,22 +199,31 @@
       <div class="questions-container">
         <hr class="first-hr-faqs">
         <details>
-          <summary>What is Bookmark?</summary>
+          <summary>What is Bookmark?
+             <img src="images/icon-arrow.svg" alt="Toggle" class="arrow-icon">
+          </summary>
+         
           <p>Bookmark is a tool that lets you save and organize websites easily.</p>
         </details>
         <hr>
         <details>
-          <summary>How can I request a new browser?</summary>
+          <summary>How can I request a new browser?
+            <img src="images/icon-arrow.svg" alt="Toggle" class="arrow-icon">
+          </summary>
           <p>You can request a new browser by contacting support or using the form.</p>
         </details>
         <hr>
         <details>
-          <summary>Is there a mobile app?</summary>
+          <summary>Is there a mobile app?
+            <img src="images/icon-arrow.svg" alt="Toggle" class="arrow-icon">
+          </summary>
           <p>Yes! Our mobile app is available on iOS and Android stores.</p>
         </details>
         <hr>
         <details>
-          <summary>What about other Chromium browsers?</summary>
+          <summary>What about other Chromium browsers?
+            <img src="images/icon-arrow.svg" alt="Toggle" class="arrow-icon">
+          </summary>
           <p>We support most Chromium browsers with similar features.</p>
         </details>
         <hr>
