--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,17 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bookmark Nav</title>
   <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body>
   <header>
-
     <div class="logo">
       <a href="#">
         <img src="images/logo-bookmark.svg" alt="logo">
       </a>
     </div>
+
     <label for="menu-toggle" class="menu-icon">
       <img src="images/icon-hamburger.svg" alt="menu">
     </label>
@@ -34,7 +33,6 @@
     <nav class="mobile-nav">
       <div>
         <img src="images/logo-bookmark.svg" alt="logo">
-        <!-- Botón cancelar como label -->
         <label for="menu-toggle" class="close">
           <img src="images/icon-close.svg" alt="cancel">
         </label>
@@ -50,70 +48,54 @@
       <a href="#"><b> LOGIN</b></a>
     </nav>
   </header>
-  <main>
 
+  <main>
     <section class="hero-section">
       <div class="hero-img">
         <img src="images/illustration-hero.svg" alt="hero-img">
       </div>
 
       <div class="hero-text">
-        <h1>A SIMPLE BOOKMARK<br> MANAGER</h1>
-        <p>A clean and simple interface to organize<br> your favourite websites. Open a new<br> browser tab and see your
-          sites load<br> instantly. Try it for free.</p>
-        <button class="chrome-button">Get it on Chrome</button> <button class="firefox-button">Get it on
-          Firefox</button>
+        <h1>A SIMPLE BOOKMARK MANAGER</h1>
+        <p>A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+        <button class="chrome-button">Get it on Chrome</button>
+        <button class="firefox-button">Get it on Firefox</button>
       </div>
-
     </section>
 
     <section class="features">
-
       <div class="intro-features">
         <h2>Features</h2>
-        <p> Our aim is to make it quick and easy for you<br> to access your favourite websites. Your<br> bookmarks sync
-          between your devices so<br> you can access them on the go.</p>
-
+        <p>Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
       </div>
 
-
       <div class="tabs-section">
-
         <input type="radio" name="tabs" id="simpleBookmarking" checked>
         <input type="radio" name="tabs" id="speedySearching">
         <input type="radio" name="tabs" id="easySharing">
 
         <div class="tab-labels-mobile">
           <hr>
-
           <label for="simpleBookmarking">Simple Bookmarking</label>
           <hr>
-
           <label for="speedySearching">Speedy Searching</label>
           <hr>
-
           <label for="easySharing">Easy Sharing</label>
           <hr>
         </div>
 
         <div class="tab-labels-desktop">
-
-
           <label for="simpleBookmarking">Simple Bookmarking</label>
           <label for="speedySearching">Speedy Searching</label>
           <label for="easySharing">Easy Sharing</label>
-
           <hr>
         </div>
 
         <div class="tab-content" id="firstOptionContent">
-
           <img src="images/illustration-features-tab-1.svg" alt="simple bookmarking">
-
           <div>
-            <h3> Bookmark in one click</h3>
-            <p> Organize your bookmarks however you like.<br>Our simple drag-and-drop interface gives<br> you complete
-              control over how you manage<br> your favourite sites.</p>
+            <h3>Bookmark in one click</h3>
+            <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
             <button>More Info</button>
           </div>
         </div>
@@ -122,11 +104,7 @@
           <img src="images/illustration-features-tab-2.svg" alt="speedy searching">
           <div>
             <h3>Intelligent Search</h3>
-            <p>
-              Our powerfull search feature will help you find saved<br>
-              sites in no time at all. No need o trawl through all of<br>
-              your bookmarks.
-            </p>
+            <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
             <button>More Info</button>
           </div>
         </div>
@@ -135,27 +113,17 @@
           <img src="images/illustration-features-tab-3.svg" alt="easy sharing">
           <div>
             <h3>Share your bookmarks</h3>
-            <p>
-              Easily share your bookmarks and collectons with<br>
-              others. Create a shareable link that you can send at<br>
-              the click of a button.
-            </p>
+            <p>Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
             <button>More Info</button>
           </div>
         </div>
-
       </div>
-
     </section>
-
 
     <section class="download-section">
       <div>
-
         <h2>Download the extension</h2>
-        <p>We've got more browsers in the pipeline.<br>
-          Please do let us know if you've got a<br>
-          favourite you'd like us to prioritize.</p>
+        <p>We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
       </div>
 
       <div class="card-container">
@@ -163,7 +131,7 @@
           <img src="images/logo-chrome.svg" alt="Chrome logo" class="logo-card">
           <h2>Add to Chrome</h2>
           <p>Minimum version 62</p>
-          <img src="images/bg-dots.svg">
+          <img src="images/bg-dots.svg" alt="">
           <button class="btn">Add & Install Extension</button>
         </div>
 
@@ -171,7 +139,7 @@
           <img src="images/logo-firefox.svg" alt="firefox logo" class="logo-card">
           <h2>Add to Firefox</h2>
           <p>Minimum version 55</p>
-          <img src="images/bg-dots.svg">
+          <img src="images/bg-dots.svg" alt="">
           <button class="btn">Add & Install Extension</button>
         </div>
 
@@ -179,85 +147,76 @@
           <img src="images/logo-opera.svg" alt="opera logo" class="logo-card">
           <h2>Add to Opera</h2>
           <p>Minimum version 46</p>
-          <img src="images/bg-dots.svg">
+          <img src="images/bg-dots.svg" alt="">
           <button class="btn">Add & Install Extension</button>
         </div>
-
       </div>
     </section>
 
-
     <section class="FAQs-section">
-
       <div class="asked-questions-title">
         <h2>Frequently Asked Questions</h2>
-        <p>Here are some of our FAQs. If you have any<br>
-          other questions you'd like answered please<br>
-          feel free to email us </p>
+        <p>Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
       </div>
 
       <div class="questions-container">
         <hr class="first-hr-faqs">
         <details>
-          <summary>What is Bookmark?
-             <img src="images/icon-arrow.svg" alt="Toggle" class="arrow-icon">
+          <summary>
+            What is Bookmark?
+            <img src="images/icon-arrow.svg" alt="Toggle" class="arrow-icon">
           </summary>
-         
           <p>Bookmark is a tool that lets you save and organize websites easily.</p>
         </details>
         <hr>
         <details>
-          <summary>How can I request a new browser?
+          <summary>
+            How can I request a new browser?
             <img src="images/icon-arrow.svg" alt="Toggle" class="arrow-icon">
           </summary>
           <p>You can request a new browser by contacting support or using the form.</p>
         </details>
         <hr>
         <details>
-          <summary>Is there a mobile app?
+          <summary>
+            Is there a mobile app?
             <img src="images/icon-arrow.svg" alt="Toggle" class="arrow-icon">
           </summary>
           <p>Yes! Our mobile app is available on iOS and Android stores.</p>
         </details>
         <hr>
         <details>
-          <summary>What about other Chromium browsers?
+          <summary>
+            What about other Chromium browsers?
             <img src="images/icon-arrow.svg" alt="Toggle" class="arrow-icon">
           </summary>
           <p>We support most Chromium browsers with similar features.</p>
         </details>
         <hr>
         <a href="#" class="more-info-btn">More Info</a>
-
       </div>
-
     </section>
-
 
     <section class="sign-up-section">
       <div>
-
         <p>35.000+ ALREADY JOINED</p>
-        <h2>Stay up-to-date with what<br> we're doing</h2>
+        <h2>Stay up-to-date with what we're doing</h2>
         <form>
           <div class="sign-up-button">
-            <input type="email" id="email" placeholder="Enter your email adress" required>
+            <input type="email" id="email" placeholder="Enter your email address" required>
             <button type="submit">Contact Us</button>
           </div>
+        </form>
       </div>
-      </form>
     </section>
-
   </main>
 
   <footer>
-
     <div class="links">
       <img src="images/logo-bookmark.svg" alt="logo">
-      <a>FEATURES </a>
-      <a>PRICING </a>
-      <a>CONTACT </a>
-
+      <a>FEATURES</a>
+      <a>PRICING</a>
+      <a>CONTACT</a>
     </div>
 
     <div class="image-links">
