Sass completed for Desktop & Mobile

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -27,8 +27,9 @@
         <li><a href="#">FEATURES</a></li>
         <li><a href="#">PRICING</a></li>
         <li><a href="#">CONTACT</a></li>
+         <li><button class="btn-secondary" href="#">LOGIN</button></li>
       </ul>
-       <li><button class="btn-secondary" href="#">LOGIN</button></li>
+      
     </nav>
 
     <nav class="mobile-nav">
@@ -89,15 +90,17 @@
           <label for="simpleBookmarking">Simple Bookmarking</label>
           <label for="speedySearching">Speedy Searching</label>
           <label for="easySharing">Easy Sharing</label>
-          <hr>
+          
         </div>
+
+        <hr class="tabs-divider">
 
         <div class="tab-content" id="firstOptionContent">
           <img src="images/illustration-features-tab-1.svg" alt="simple bookmarking">
           <div>
             <h3>Bookmark in one click</h3>
             <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
-            <button>More Info</button>
+            <button class="btn-moreinfo">More Info</button>
           </div>
         </div>
 
@@ -106,7 +109,7 @@
           <div>
             <h3>Intelligent Search</h3>
             <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
-            <button>More Info</button>
+            <button class="btn-moreinfo">More Info</button>
           </div>
         </div>
 
