--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -60,6 +60,97 @@
     </div>
   </section>
 
+
+  <section id="features" class="py-5 text-center">
+    <div class="container">
+      <h2 class="mb-4">Features</h2>
+      <p class="text-muted mb-5  mx-auto w-50">
+        A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites
+        load instantly. Try it for free.
+      </p>
+
+      <!-- Tabs -->
+      <ul class="nav nav-tabs justify-content-center" id="featuresTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="bookmark-tab" data-bs-toggle="tab" data-bs-target="#bookmark"
+            type="button" role="tab">
+            Simple Bookmarking
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="search-tab" data-bs-toggle="tab" data-bs-target="#search" type="button"
+            role="tab">
+            Speedy Searching
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="sharing-tab" data-bs-toggle="tab" data-bs-target="#sharing" type="button"
+            role="tab">
+            Easy Sharing
+          </button>
+        </li>
+      </ul>
+
+      <!-- Tab content -->
+      <div class="tab-content mt-4" id="featuresTabContent">
+
+        <!-- Tab 1: Bookmark -->
+        <div class="tab-pane fade show active" id="bookmark" role="tabpanel" aria-labelledby="bookmark-tab">
+          <div class="row align-items-center w-75 mx-auto mt-5">
+            <!-- Imagen -->
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+              <img src="images/illustration-features-tab-1.svg" alt="simple bookmarking" class="img-fluid">
+            </div>
+            <!-- Contenido -->
+            <div class="col-md-6 text-center text-md-start">
+              <h3>Bookmark in one click</h3>
+              <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control
+                over how you manage your favourite sites.</p>
+              <button class="btn btn-primary">More Info</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tab 2: Speedy Searching -->
+        <div class="tab-pane fade" id="search" role="tabpanel" aria-labelledby="search-tab">
+          <div class="row align-items-center w-75 mx-auto mt-5">
+            <!-- Imagen -->
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+              <img src="images/illustration-features-tab-2.svg" alt="speedy searching" class="img-fluid">
+            </div>
+            <!-- Contenido -->
+            <div class="col-md-6 text-center text-md-start">
+              <h3>Intelligent Search</h3>
+              <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through
+                all of your bookmarks.</p>
+              <button class="btn btn-primary">More Info</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tab 3: Easy Sharing -->
+        <div class="tab-pane fade" id="sharing" role="tabpanel" aria-labelledby="sharing-tab">
+          <div class="row align-items-center w-75 mx-auto mt-5">
+            <!-- Imagen -->
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+              <img src="images/illustration-features-tab-3.svg" alt="easy sharing" class="img-fluid">
+            </div>
+            <!-- Contenido -->
+            <div class="col-md-6 text-center text-md-start">
+              <h3>Share your bookmarks</h3>
+              <p>Easily share your bookmarks and collections with others. Create a shareable link that you can send at
+                the click of a button.</p>
+              <button class="btn btn-primary">More Info</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+  </section>
+
+
+
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
