download and Faqs desktop

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -149,6 +149,136 @@
 
   </section>
 
+  <!-- Download Section -->
+  <section id="download" class="py-5 text-center">
+    <div class="container">
+      <h2 class="mb-3">Download the extension</h2>
+      <p class="mb-5 text-muted w-50 mx-auto">
+        We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to
+        prioritize.
+      </p>
+
+      <div class="row justify-content-center g-4 w-75 mx-auto">
+        <!-- Chrome Card -->
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body text-center">
+              <img src="images/logo-chrome.svg" alt="Chrome" class="mb-5" style="width:100px;">
+              <h5 class="card-title">Add to Chrome</h5>
+              <p class="text-muted">Minimum version 62</p>
+               <img src="images/bg-dots.svg" alt="dots" class="mb-2 mt-3" >
+              <button class="btn btn-primary mt-4">Add & Install Extension</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Firefox Card -->
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm mt-3">
+            <div class="card-body text-center">
+              <img src="images/logo-firefox.svg" alt="Firefox" class="mb-5" style="width:100px;">
+              <h5 class="card-title">Add to Firefox</h5>
+              <p class="text-muted">Minimum version 55</p>
+               <img src="images/bg-dots.svg" alt="dots" class="mb-2 mt-3" >
+              <button class="btn btn-primary mt-4">Add & Install Extension</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Opera Card -->
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm mt-5">
+            <div class="card-body text-center">
+              <img src="images/logo-opera.svg" alt="Opera" class="mb-5" style="width:100px;">
+              <h5 class="card-title">Add to Opera</h5>
+              <p class="text-muted">Minimum version 46</p>
+              <img src="images/bg-dots.svg" alt="dots" class="mb-2 mt-3" >
+              <button class="btn btn-primary mt-4">Add & Install Extension</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FAQs Section -->
+<section id="faqs" class="py-5">
+  <div class="container w-50 mx-auto">
+    <h2 class="text-center mb-3">Frequently Asked Questions</h2>
+    <p class="text-center text-muted mb-5 w-75 mx-auto">
+      Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.
+    </p>
+
+    <div class="accordion" id="faqAccordion">
+      <!-- FAQ 1 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="faqHeading1">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq1"
+            aria-expanded="false" aria-controls="faq1">
+            What is Bookmark?
+          </button>
+        </h2>
+        <div id="faq1" class="accordion-collapse collapse" aria-labelledby="faqHeading1" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Bookmark is a tool that lets you save and organize websites easily.
+          </div>
+        </div>
+      </div>
+
+      <!-- FAQ 2 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="faqHeading2">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2"
+            aria-expanded="false" aria-controls="faq2">
+            How can I request a new browser?
+          </button>
+        </h2>
+        <div id="faq2" class="accordion-collapse collapse" aria-labelledby="faqHeading2" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            You can request a new browser by contacting support or using the form.
+          </div>
+        </div>
+      </div>
+
+      <!-- FAQ 3 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="faqHeading3">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3"
+            aria-expanded="false" aria-controls="faq3">
+            Is there a mobile app?
+          </button>
+        </h2>
+        <div id="faq3" class="accordion-collapse collapse" aria-labelledby="faqHeading3" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Yes! Our mobile app is available on iOS and Android stores.
+          </div>
+        </div>
+      </div>
+
+      <!-- FAQ 4 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="faqHeading4">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4"
+            aria-expanded="false" aria-controls="faq4">
+            What about other Chromium browsers?
+          </button>
+        </h2>
+        <div id="faq4" class="accordion-collapse collapse" aria-labelledby="faqHeading4" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            We support most Chromium browsers with similar features.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- More Info Button -->
+    <div class="text-center mt-4">
+      <a href="#" class="btn btn-primary">More Info</a>
+    </div>
+  </div>
+</section>
+
+
 
 
   <!-- Bootstrap JS -->
