--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -166,7 +166,7 @@
               <img src="images/logo-chrome.svg" alt="Chrome" class="mb-5" style="width:100px;">
               <h5 class="card-title">Add to Chrome</h5>
               <p class="text-muted">Minimum version 62</p>
-               <img src="images/bg-dots.svg" alt="dots" class="mb-2 mt-3" >
+              <img src="images/bg-dots.svg" alt="dots" class="mb-2 mt-3">
               <button class="btn btn-primary mt-4">Add & Install Extension</button>
             </div>
           </div>
@@ -179,7 +179,7 @@
               <img src="images/logo-firefox.svg" alt="Firefox" class="mb-5" style="width:100px;">
               <h5 class="card-title">Add to Firefox</h5>
               <p class="text-muted">Minimum version 55</p>
-               <img src="images/bg-dots.svg" alt="dots" class="mb-2 mt-3" >
+              <img src="images/bg-dots.svg" alt="dots" class="mb-2 mt-3">
               <button class="btn btn-primary mt-4">Add & Install Extension</button>
             </div>
           </div>
@@ -192,7 +192,7 @@
               <img src="images/logo-opera.svg" alt="Opera" class="mb-5" style="width:100px;">
               <h5 class="card-title">Add to Opera</h5>
               <p class="text-muted">Minimum version 46</p>
-              <img src="images/bg-dots.svg" alt="dots" class="mb-2 mt-3" >
+              <img src="images/bg-dots.svg" alt="dots" class="mb-2 mt-3">
               <button class="btn btn-primary mt-4">Add & Install Extension</button>
             </div>
           </div>
@@ -202,81 +202,128 @@
   </section>
 
   <!-- FAQs Section -->
-<section id="faqs" class="py-5">
-  <div class="container w-50 mx-auto">
-    <h2 class="text-center mb-3">Frequently Asked Questions</h2>
-    <p class="text-center text-muted mb-5 w-75 mx-auto">
-      Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.
-    </p>
+  <section id="faqs" class="py-5">
+    <div class="container w-50 mx-auto">
+      <h2 class="text-center mb-3">Frequently Asked Questions</h2>
+      <p class="text-center text-muted mb-5 w-75 mx-auto">
+        Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.
+      </p>
 
-    <div class="accordion" id="faqAccordion">
-      <!-- FAQ 1 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faqHeading1">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq1"
-            aria-expanded="false" aria-controls="faq1">
-            What is Bookmark?
-          </button>
-        </h2>
-        <div id="faq1" class="accordion-collapse collapse" aria-labelledby="faqHeading1" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            Bookmark is a tool that lets you save and organize websites easily.
+      <div class="accordion" id="faqAccordion">
+        <!-- FAQ 1 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqHeading1">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq1"
+              aria-expanded="false" aria-controls="faq1">
+              What is Bookmark?
+            </button>
+          </h2>
+          <div id="faq1" class="accordion-collapse collapse" aria-labelledby="faqHeading1"
+            data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Bookmark is a tool that lets you save and organize websites easily.
+            </div>
+          </div>
+        </div>
+
+        <!-- FAQ 2 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqHeading2">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2"
+              aria-expanded="false" aria-controls="faq2">
+              How can I request a new browser?
+            </button>
+          </h2>
+          <div id="faq2" class="accordion-collapse collapse" aria-labelledby="faqHeading2"
+            data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              You can request a new browser by contacting support or using the form.
+            </div>
+          </div>
+        </div>
+
+        <!-- FAQ 3 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqHeading3">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3"
+              aria-expanded="false" aria-controls="faq3">
+              Is there a mobile app?
+            </button>
+          </h2>
+          <div id="faq3" class="accordion-collapse collapse" aria-labelledby="faqHeading3"
+            data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Yes! Our mobile app is available on iOS and Android stores.
+            </div>
+          </div>
+        </div>
+
+        <!-- FAQ 4 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqHeading4">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4"
+              aria-expanded="false" aria-controls="faq4">
+              What about other Chromium browsers?
+            </button>
+          </h2>
+          <div id="faq4" class="accordion-collapse collapse" aria-labelledby="faqHeading4"
+            data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              We support most Chromium browsers with similar features.
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- FAQ 2 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faqHeading2">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2"
-            aria-expanded="false" aria-controls="faq2">
-            How can I request a new browser?
-          </button>
-        </h2>
-        <div id="faq2" class="accordion-collapse collapse" aria-labelledby="faqHeading2" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            You can request a new browser by contacting support or using the form.
-          </div>
-        </div>
-      </div>
-
-      <!-- FAQ 3 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faqHeading3">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3"
-            aria-expanded="false" aria-controls="faq3">
-            Is there a mobile app?
-          </button>
-        </h2>
-        <div id="faq3" class="accordion-collapse collapse" aria-labelledby="faqHeading3" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            Yes! Our mobile app is available on iOS and Android stores.
-          </div>
-        </div>
-      </div>
-
-      <!-- FAQ 4 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faqHeading4">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4"
-            aria-expanded="false" aria-controls="faq4">
-            What about other Chromium browsers?
-          </button>
-        </h2>
-        <div id="faq4" class="accordion-collapse collapse" aria-labelledby="faqHeading4" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            We support most Chromium browsers with similar features.
-          </div>
-        </div>
+      <!-- More Info Button -->
+      <div class="text-center mt-4">
+        <a href="#" class="btn btn-primary">More Info</a>
       </div>
     </div>
+  </section>
 
-    <!-- More Info Button -->
-    <div class="text-center mt-4">
-      <a href="#" class="btn btn-primary">More Info</a>
+  <!-- Sign-Up Section -->
+  <section class="bg-primary text-white text-center py-5">
+    <div class="container">
+      <p class="text-uppercase mb-2" style="letter-spacing: 2px;">35,000+ already joined</p>
+      <h2 class="fw-semibold mb-4 w-25 mx-auto">Stay up-to-date with what we’re doing</h2>
+
+      <form class="d-flex justify-content-center flex-column flex-sm-row gap-2 w-50 mx-auto">
+        <input type="email" class="form-control" placeholder="Enter your email address" required>
+        <button type="submit" class="btn btn-danger px-10">Contact</button>
+      </form>
     </div>
-  </div>
-</section>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white py-4">
+    <div
+      class="container d-flex flex-column flex-md-row justify-content-between align-items-center text-center text-md-start">
+      <!-- Left Side -->
+      <div class="d-flex align-items-center mb-3 mb-md-0">
+        <img src="images/logo-bookmark.svg" alt="Bookmark" class="me-3" style="height: 25px;">
+        <ul class="list-unstyled d-flex mb-0">
+          <li><a href="#" class="text-white text-decoration-none me-4">Features</a></li>
+          <li><a href="#" class="text-white text-decoration-none me-4">Pricing</a></li>
+          <li><a href="#" class="text-white text-decoration-none">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- Right Side -->
+      <!-- Right Side -->
+      <div class="d-flex align-items-center g-4">
+        <a href="#" class="me-3">
+          <img src="images/icon-facebook.svg" alt="Facebook" class="social-icon">
+        </a>
+        <a href="#">
+          <img src="images/icon-twitter.svg" alt="Twitter" class="social-icon">
+        </a>
+      </div>
+
+    </div>
+  </footer>
+
+
 
 
 
